  - After reorganisation in revision 981 and the fix for bug #1406173 the
    par2backend does not remove .par2 files anymore when removing
    duplicity-*.gpg files.
  - This banch adds an unfiltered_list() method which is used in
    delete() and delete_list()
* Updated man pages to reflect more contributors.
* Fix bug #1493573.  Correct option typo in man page.


New in v0.7.04 (2015/08/02)
---------------------------
* Merged in lp:~noizyland/duplicity/fix-progress
  - Fixes bug 1264744.  selection.filelist_globbing_get_sfs leaves the
    filelist file object's position at the end of the file. When the
    --progress option is used the filelists need to be read twice. On
    the second read nothing is read from the file because file has
    already been read and the position is EOF.  This patch calls seek(0)
    on the filelist to reset the position to BOF so that subsequent
    read() calls will return data.
* Added pylint ignore error in webdavbackend.py.
* Merged in lp:~bmerry/duplicity/pydrive-regular
  - This implements the proposal made by somebody else
    (http://lists.gnu.org/archive/html/duplicity-talk/2015-02/msg00037.html)
    to allow the pydrive backend to work with a normal drive account instead
    of a service account. It seems to be working for me: I was able to migrate
    seamlessly from the gdocs backend. It's set up so that a service account
    can still be used, depending on which environment variable is set.
    The man page is updated to describe how to use the new functionality.
* Merged in lp:~ed.so/duplicity/gdocs.pydrive
  - make pydrive new gdocs default backend
  - keep gdata backend as gdata+gdocs://
* Merged in lp:~raymii/duplicity/fix-swiftbackend-max-10000-files-in-list
  - Swiftclient by default returns at max 10000 files. By adding
    full_listing=True we make sure all objects are returned.
    Ref: https://lists.nongnu.org/archive/html/duplicity-talk/2015-05/msg00060.html