@@ -1,6 +1,13 @@
 2015-09-06  Kenneth Loafman  <kenneth@loafman.com>
 
     * Fix bug #1493573.  Correct option name in man page.
+    * Fix bug #1494228 CygWin: TypeError: basis_file must be a (true) file
+      - The problem that caused the change to tempfile.TemporaryFile was due
+        to the fact that os.tmpfile always creates its file in the system
+        temp directory, not in the directory specified.  The fix applied was
+        to use os.tmpfile in cygwin/windows and tempfile.TemporaryFile in all
+        the rest.  This means that cygwin is now broken with respect to temp
+        file placement of this one file (deleted automatically on close).
 
 2015-09-06  Kenneth Loafman  <kenneth@loafman.com>
 
