@@ -29,6 +29,13 @@ New in v0.7.05 (2015/09/??)
     delete() and delete_list()
 * Updated man pages to reflect more contributors.
 * Fix bug #1493573.  Correct option typo in man page.
+* Fix bug #1494228 CygWin: TypeError: basis_file must be a (true) file
+  - The problem that caused the change to tempfile.TemporaryFile was due
+    to the fact that os.tmpfile always creates its file in the system
+    temp directory, not in the directory specified.  The fix applied was
+    to use os.tmpfile in cygwin/windows and tempfile.TemporaryFile in all
+    the rest.  This means that cygwin is now broken with respect to temp
+    file placement of this one file (deleted automatically on close).
 
 
 New in v0.7.04 (2015/08/02)
